# computer-vision

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/zonewatch/: __init__.py  app.py  cli.py  config.py  detectors.py  events.py  notifiers.py  picker.py  stream.py  zones.py
tests/: test_config.py  test_events.py  test_notifiers.py  test_picker.py  test_sources.py  test_zones.py
